--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ html {
   border-radius: 9px;
 }
 .background {
-  background: rgba(0, 0, 0, 0.7) url("../bg.jpg");
+  background: rgba(0, 0, 0, 0.7) url("bg.jpg");
   background-size: cover;
   background-blend-mode: darken;
 }
